[package]
name = "mistik-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
futures = "0.3"
dotenvy = "0.15.7"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dependencies.lavalink-rs]
version = "0.10.0-beta"
features = ["serenity-native", "songbird"]


[dependencies.songbird]
version = "0.3.2"
features= ["gateway", "serenity-native"]


[dependencies.hook]
git = "https://github.com/arqunis/hook"

